--- a/wp-content/themes/inpact-test/stylus/style.styl
+++ b/wp-content/themes/inpact-test/stylus/style.styl
@@ -9,6 +9,7 @@ Description: Description
 @require 'text-styles.styl';
 @require 'reset.styl';
 @require 'vars.styl';
-
+@require 'menu.styl';
+@require 'page-works.styl';
 
 
