--- a/wp-content/themes/inpact-test/stylus/text-styles.styl
+++ b/wp-content/themes/inpact-test/stylus/text-styles.styl
@@ -24,6 +24,6 @@
 }
 //会社名と各ページのタイトル
 .title {
-    font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+    font-family: YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
     font-weight: bold; 
 }
