--- a/wp-content/themes/inpact-test/style.css
+++ b/wp-content/themes/inpact-test/style.css
@@ -1,5 +1,111 @@
-.works {
+/*
+Theme Name: inpact test
+Author: tomohara
+Description: Description
+*/
+@charset 'utf-8';
+.text {
+  font-size: 1.6rem;
+}
+.text.sm {
+  font-size: 1.2rem;
+}
+.text.lg {
+  font-size: 1.8rem;
+}
+.title {
+  font-size: 2.2rem;
+  color: $text;
+}
+.title.sm {
+  font-size: 2rem;
+}
+.title.lg {
+  font-size: 3rem;
+}
+.title {
+  font-family: YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  font-weight: bold;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+ul,
+ol {
+  padding: 0;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  font-family: 'Kosugi Maru', 'Yu Gothic', 'Meiryo', Meiryo, sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+ul,
+ol {
+  list-style: none;
+}
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+img {
+  max-width: 100%;
+  display: block;
+}
+article > * + * {
+  margin-top: 1em;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+.works .work-entry-columns {
   display: flex;
   flex-wrap: wrap;
-  background: #808080;
+  justify-content: center;
+}
+.works .work-item {
+  flex-basis: calc(100% / 3 - 6rem);
+  min-width: 30rem;
+  margin: 0 2rem 10rem;
+  justify-content: space-between;
+}
+.works .work-img img {
+  height: 100%;
+}
+.works .pagination {
+  flex-basis: 100%;
+  text-align: center;
 }
